deployment/ingress/traefik/k8s-traefik.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-kibana-ingress
  namespace: kube-system
  annotations:
      kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: dashboard.k8s
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
  - host: kibana.k8s
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 5601
  - host: es.k8s
    http:
      paths:
      - backend:
          serviceName: elasticsearch
          servicePort: 9200
